--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <a href="./">WebStudio</a>
         <!-- Навігація -->
         <ul>
-          <li><a href="">студія</a></li>
-          <li><a href="./portfolio.html">портфоліо</a></li>
+          <li style="color: blue;"><a href="">студія</a></li>
+          <li><a href="https://www.youtube.com/">портфоліо</a></li>
           <li><a href="">контакти</a></li>
         </ul>
       </nav>
@@ -37,15 +37,15 @@
           <h3 id="title">Увага до деталей</h3>
           <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
-          <li>
+          <li class="item">
           <h3>Пунктуальність</h3>
           <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
-        <li>
+        <li class="item">
           <h3>Планування</h3>
           <p>Так само консультація з широким активом значною мірою зумовлює.</p>
 </li>
-<li>
+<li class="item">
           <h3>Сучасні технології</h3>
           <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 </li>
@@ -53,7 +53,7 @@
       </section>
       <section>
 <h2>Чим ми займаємося</h2>
-<ul>
+<ul class="ui">
 <li>
 <img src="images/img0.jpg" alt="">
 </li>
