--- a/practice.html
+++ b/practice.html
@@ -26,12 +26,35 @@
         <ul class="list"> <li class="item"> 
             <h3 id="title">До уваги деталей</h3>
               Ідейні міркування, а також початок повсякденної роботи з формування позиції. тягне у себе. 
+
             </p> </li>
             <li class="item">
                  <h3>Планування</h3> 
                  <p>Так само консультація з широким активом значною мірою зумовлює.</p> </li>
                   <li class="item"> <h3>Сучасні технології </h3> <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p> 
                 </li> </ul> </section>
+
+                <section class="section">
+                     <h2 class="section-title">Переваги</h2>
+                      <ul class="list"> 
+                        <li class="item"> 
+                        <h3 class="title"> id="title">Увага до деталей </h3> 
+                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                     </li>
+                      <li class="item">
+                         <h3 class="title">Пунктуальність</h3>
+                          <p class="text">Завдання організації, особливо рамки та місце навчання кадрів тягне у себе.</p> 
+                        </li>
+                        <li class="item">
+                             <h3 class="title">Планування</h3> 
+                             <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p> 
+                            </li>
+                             <li class="item">
+                                 <h3>Сучасні технології </h3> 
+                                 <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p> 
+                                </li>
+                             </ul>
+                             </section>
 
 </body>
 </html>
